Fixed text alignment

--- a/style.css
+++ b/style.css
@@ -93,7 +93,7 @@ a {
     font-size: 20px;
 }
 #ref{
-    text-align: right;
+    text-align: left;
     margin-left: 25vh;
     font-size: 20px;
 }
